# OpenGLToy

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: README.md
cmake/: OpenGLToyDependencies.cmake
docs/: CMake_GUI_and_vcpkg.md
scripts/: bootstrap-vcpkg.bat  bootstrap-vcpkg.sh  build-linux.sh  build-windows.bat  setup-msvc-env.bat
source/app/: Application.cpp  Application.h  main.cpp
source/foundation/Base/: NonCopyable.h
source/foundation/Diagnostics/: Assert.cpp  Assert.h  Log.cpp  Log.h
source/foundation/IO/: FileSystem.cpp  FileSystem.h
source/foundation/Time/: HighResolutionClock.cpp  HighResolutionClock.h
source/platform/: IInputService.h  IWindow.h  WindowTypes.h
source/platform/Glfw/: GlfwInputService.cpp  GlfwInputService.h  GlfwWindow.cpp  GlfwWindow.h
source/render/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLDebug.cpp  GLDebug.h  GLLoader.cpp  GLLoader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture2D.cpp  GLTexture2D.h  GLVertexArray.cpp  GLVertexArray.h
source/render/Scene/: Camera.cpp  Camera.h
source/samples/: BuiltInSampleRegistration.cpp  BuiltInSampleRegistration.h  ISample.h  SampleRegistry.cpp  SampleRegistry.h
source/samples/getting_started/: SampleCameraClass.cpp  SampleCameraClass.h  SampleCoordinateSystems.cpp  SampleCoordinateSystems.h  SampleHelloTriangle.cpp  SampleHelloTriangle.h  SampleHelloWindow.cpp  SampleHelloWindow.h  SampleShadersBasic.cpp  SampleShadersBasic.h  SampleTexturesBasic.cpp  SampleTexturesBasic.h  SampleTransformations.cpp  SampleTransformations.h
